--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "bcrypt": "^6.0.0",
     "csv-parse": "^6.1.0",
     "csv-parser": "^3.2.0",
+    "daisyui": "^5.0.50",
     "formidable": "^3.5.4",
     "mysql2": "^3.14.2",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "streamifier": "^0.1.1",
-    "daisyui": "^4.12.10"
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,7 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
